@@ -20,7 +20,7 @@ import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toSet;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.mockito.Matchers.anyLong;
+import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
@@ -45,7 +45,7 @@ public class PriceAggregatorTests {
         PriceRetriever priceRetriever = mock(PriceRetriever.class);
         List<Double> prices = IntStream.range(0, shopCount-1).boxed()
                 .map(i -> ThreadLocalRandom.current().nextDouble())
-                .collect(toList());
+                .toList();
         when(priceRetriever.getPrice(anyLong(), anyLong())).thenReturn(ThreadLocalRandom.current().nextDouble(),
                 prices.toArray(new Double[]{}));
         priceAggregator.setPriceRetriever(priceRetriever);
